Display portfolios on start page

--- a/PerformanceApp.Server/appsettings.json
+++ b/PerformanceApp.Server/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=padb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=padb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+    "PadbContext": "Server=localhost\\SQLEXPRESS;Database=padb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
