Begin implementing backend authentication

--- a/PerformanceApp.Server/appsettings.json
+++ b/PerformanceApp.Server/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=padb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
     "PadbContext": "Server=localhost\\SQLEXPRESS;Database=padb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Secret": "SuperMegaYoloSwagSecretKey123"
   }
 }
