Prepare Server for integration tests

--- a/PerformanceApp.Server/PerformanceApp.Server.csproj
+++ b/PerformanceApp.Server/PerformanceApp.Server.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\PerformanceApp.Data\PerformanceApp.Data.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
+  </PropertyGroup>
+
 </Project>
