Add Infrastructure project

--- a/PerformanceApp.Server/PerformanceApp.Server.csproj
+++ b/PerformanceApp.Server/PerformanceApp.Server.csproj
@@ -34,6 +34,7 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
     <ProjectReference Include="..\PerformanceApp.Data\PerformanceApp.Data.csproj" />
+    <ProjectReference Include="..\PerformanceApp.Infrastructure\PerformanceApp.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
