Fix project references

--- a/PerformanceApp.Seeder/PerformanceApp.Seeder.csproj
+++ b/PerformanceApp.Seeder/PerformanceApp.Seeder.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PerformanceApp.Data\PerformanceApp.Data.csproj" />
+        <ProjectReference Include="..\PerformanceApp.Infrastructure\PerformanceApp.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
