--- a/PerformanceApp.Data.Test/PerformanceApp.Data.Test.csproj
+++ b/PerformanceApp.Data.Test/PerformanceApp.Data.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PerformanceApp.Data\PerformanceApp.Data.csproj" />
+    <ProjectReference Include="..\PerformanceApp.Infrastructure\PerformanceApp.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
